--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -1,19 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="16dp">
+    >
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"/>
+
 
     <com.webianks.library.PopupBubble
+        android:layout_margin="16dp"
         android:id="@+id/popup_bubble"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        app:text="New posts"
-        app:textColor="#424242"
-        app:imageColor="#424242"
-        app:backgroundColor="#FFC107"
-        />
+        app:backgroundColor="#607D8B"
+        app:iconColor="#ffffff"
+        app:text="New stuff"
+        app:textColor="#ffffff" />
 
 </RelativeLayout>
