--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -7,6 +7,7 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
+        android:scrollbars="vertical"
         android:layout_height="match_parent"
         android:layout_width="match_parent"/>
 
@@ -17,7 +18,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        app:backgroundColor="#607D8B"
+        app:backgroundColor="?attr/colorPrimary"
         app:iconColor="#ffffff"
         app:text="New stuff"
         app:textColor="#ffffff" />
