Hidden in default behaviour.

--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -20,7 +20,7 @@
         android:layout_centerHorizontal="true"
         app:backgroundColor="?attr/colorPrimary"
         app:iconColor="#ffffff"
-        app:text="New stuff"
+        app:text="New Stories"
         app:textColor="#ffffff" />
 
 </RelativeLayout>
