--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
@@ -13,6 +12,7 @@
 
 
     <com.webianks.library.PopupBubble
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_margin="16dp"
         android:id="@+id/popup_bubble"
         android:layout_width="wrap_content"
@@ -21,6 +21,7 @@
         app:backgroundColor="?attr/colorPrimary"
         app:iconColor="#ffffff"
         app:text="New Stories"
-        app:textColor="#ffffff" />
+        app:textColor="#ffffff"
+        />
 
 </RelativeLayout>
