new function added : update icon with resource id new function added : update type face of text changed styled attribute names to prevent conflicts with other libraries add type face to styled attributes

--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -18,10 +18,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        app:backgroundColor="?attr/colorPrimary"
-        app:iconColor="#ffffff"
-        app:text="New Stories"
-        app:textColor="#ffffff"
+        app:pb_backgroundColor="?attr/colorPrimary"
+        app:pb_iconColor="#ffffff"
+        app:pb_text="New Stories"
+        app:pb_textColor="#ffffff"
+        app:pb_icon="@drawable/ic_keyboard_arrow_up_white_18dp"
+        app:pb_font="iran_sans_mobile.ttf"
         />
 
 </RelativeLayout>
