--- a/popup-bubble/src/main/res/values/attrs.xml
+++ b/popup-bubble/src/main/res/values/attrs.xml
@@ -2,12 +2,13 @@
 <resources>
 
     <declare-styleable name="PopupBubble">
-        <attr name="text" format="string"/>
-        <attr name="textColor" format="string"/>
-        <attr name="iconColor" format="string"/>
-        <attr name="backgroundColor" format="string"/>
-        <attr name="showIcon" format="boolean"/>
-        <attr name="setIcon" format="integer"/>
+        <attr name="pb_text" format="string"/>
+        <attr name="pb_textColor" format="string"/>
+        <attr name="pb_iconColor" format="string"/>
+        <attr name="pb_backgroundColor" format="string"/>
+        <attr name="pb_showIcon" format="boolean"/>
+        <attr name="pb_icon" format="reference"/>
+        <attr name="pb_font" format="string"/>
     </declare-styleable>
 
 </resources>
