--- a/popup-bubble/src/main/res/values/ids.xml
+++ b/popup-bubble/src/main/res/values/ids.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <item name="image_view" type="id">image_view</item>
+    <item name="image_view" type="id"/>
 </resources>
