repackage to com.nextcloud.ui.popupbubble
Signed-off-by: Andy Scherzinger <info@andy-scherzinger.de>

--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -9,7 +9,7 @@
         android:layout_height="match_parent"
         android:scrollbars="vertical" />
 
-    <com.webianks.library.PopupBubble
+    <com.nextcloud.ui.popupbubble.PopupBubble
         android:id="@+id/popup_bubble"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
